{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 217,
  "lineage": "618fa8bb-6361-465e-5acf-1af1a84a45d8",
  "resources": [
    {
      "module": "module.ec2_private1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:071872765473:instance/i-0caeba4054f73c716",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caeba4054f73c716",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a86f56fac478043e",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0198846d2b215dac9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f881b491798d5d59",
            "tags": {
              "Name": "ec2_private_01"
            },
            "tags_all": {
              "Name": "ec2_private_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d95e18b832f044eb"
            ]
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_private2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:071872765473:instance/i-02ebe47cd7c90b448",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ebe47cd7c90b448",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eab4f210defb16ac",
            "private_dns": "ip-10-0-4-173.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.173",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-098bd20706029e74f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05266d9126f708a3e",
            "tags": {
              "Name": "ec2_private_02"
            },
            "tags_all": {
              "Name": "ec2_private_02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d95e18b832f044eb"
            ]
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:071872765473:instance/i-0c9c338a5637a7e09",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c9c338a5637a7e09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b8f447734b02bc0d",
            "private_dns": "ip-10-0-0-95.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.95",
            "public_ip": "34.205.74.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b911716e8773ca65",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a431727baaf8896",
            "tags": {
              "Name": "ec2_public_01"
            },
            "tags_all": {
              "Name": "ec2_public_01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d95e18b832f044eb"
            ]
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:071872765473:instance/i-0ea18195b42e048a9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ea18195b42e048a9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098b21698c9a17885",
            "private_dns": "ip-10-0-2-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.201",
            "public_ip": "54.167.92.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029c2496ae656161b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a4aea8c42d834f2",
            "tags": {
              "Name": "ec2_public_02"
            },
            "tags_all": {
              "Name": "ec2_public_02"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d95e18b832f044eb"
            ]
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_private",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:loadbalancer/app/private/ccbd356503cb949f",
            "arn_suffix": "app/private/ccbd356503cb949f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-1034719365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:loadbalancer/app/private/ccbd356503cb949f",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d95e18b832f044eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05266d9126f708a3e"
              },
              {
                "subnet_id": "subnet-0f881b491798d5d59"
              }
            ],
            "subnets": [
              "subnet-05266d9126f708a3e",
              "subnet-0f881b491798d5d59"
            ],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "vpc_id": "vpc-0909efef33fd2e93b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_private",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_app_tar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:listener/app/private/ccbd356503cb949f/c6ef4817bf4a86fc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:listener/app/private/ccbd356503cb949f/c6ef4817bf4a86fc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:loadbalancer/app/private/ccbd356503cb949f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.lb_private.aws_lb_target_group.ec2_target",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_private",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3",
            "arn_suffix": "targetgroup/private/51ae07480d6773e3",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_private",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_targr_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "id1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3-20230321132325038700000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3",
            "target_id": "i-0caeba4054f73c716"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb_target_group.ec2_target",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        },
        {
          "index_key": "id2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3-20230321132324974900000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/private/51ae07480d6773e3",
            "target_id": "i-02ebe47cd7c90b448"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb_target_group.ec2_target",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_public",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:loadbalancer/app/public/6d7d110eebc0a00d",
            "arn_suffix": "app/public/6d7d110eebc0a00d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-1963296827.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:loadbalancer/app/public/6d7d110eebc0a00d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d95e18b832f044eb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a431727baaf8896"
              },
              {
                "subnet_id": "subnet-07a4aea8c42d834f2"
              }
            ],
            "subnets": [
              "subnet-07a431727baaf8896",
              "subnet-07a4aea8c42d834f2"
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "vpc_id": "vpc-0909efef33fd2e93b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.ec2_public1.aws_instance.ec2_instance",
            "module.ec2_public2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_public",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_app_tar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:listener/app/public/6d7d110eebc0a00d/84160c2a5c397816",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:listener/app/public/6d7d110eebc0a00d/84160c2a5c397816",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:loadbalancer/app/public/6d7d110eebc0a00d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.ec2_public1.aws_instance.ec2_instance",
            "module.ec2_public2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.lb_public.aws_lb.app_lb",
            "module.lb_public.aws_lb_target_group.ec2_target",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_public",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ec2_target",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0",
            "arn_suffix": "targetgroup/public/c037bccb617ae5c0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.ec2_public1.aws_instance.ec2_instance",
            "module.ec2_public2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.lb_public",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_targr_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "id1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0-20230321132744207300000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0",
            "target_id": "i-0c9c338a5637a7e09"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.ec2_public1.aws_instance.ec2_instance",
            "module.ec2_public2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.lb_public.aws_lb_target_group.ec2_target",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        },
        {
          "index_key": "id2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0-20230321132744231200000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:071872765473:targetgroup/public/c037bccb617ae5c0",
            "target_id": "i-0ea18195b42e048a9"
          },
          "dependencies": [
            "module.ec2_private1.aws_instance.ec2_instance",
            "module.ec2_private2.aws_instance.ec2_instance",
            "module.ec2_public1.aws_instance.ec2_instance",
            "module.ec2_public2.aws_instance.ec2_instance",
            "module.lb_private.aws_lb.app_lb",
            "module.lb_public.aws_lb_target_group.ec2_target",
            "module.main_vpc.aws_vpc.vpc",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet",
            "module.security_group.aws_security_group.security_gr"
          ]
        }
      ]
    },
    {
      "module": "module.main_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:vpc/vpc-0909efef33fd2e93b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-003150e1deb23fce2",
            "default_route_table_id": "rtb-035bad23a66e7fbd5",
            "default_security_group_id": "sg-0db3a649333f74765",
            "dhcp_options_id": "dopt-02b19139648ac55e7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0909efef33fd2e93b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-035bad23a66e7fbd5",
            "owner_id": "071872765473",
            "tags": {
              "Name": "david"
            },
            "tags_all": {
              "Name": "david"
            }
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016db9e0b0a148bd3",
            "domain": "vpc",
            "id": "eipalloc-016db9e0b0a148bd3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-214-28-129.compute-1.amazonaws.com",
            "public_ip": "18.214.28.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:internet-gateway/igw-0337cbb9b6cdefb7b",
            "id": "igw-0337cbb9b6cdefb7b",
            "owner_id": "071872765473",
            "tags": {
              "Name": "vpc_igw"
            },
            "tags_all": {
              "Name": "vpc_igw"
            },
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gatway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-016db9e0b0a148bd3",
            "connectivity_type": "public",
            "id": "nat-04d99851c6bce83e0",
            "network_interface_id": "eni-05797e479dd48d780",
            "private_ip": "10.0.2.199",
            "public_ip": "18.214.28.129",
            "subnet_id": "subnet-07a4aea8c42d834f2",
            "tags": {
              "Name": "natgatway"
            },
            "tags_all": {
              "Name": "natgatway"
            }
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_eip.nat_eip",
            "module.public_subnet2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-098562554eee3ebbd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04d99851c6bce83e0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-098562554eee3ebbd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gatway",
            "module.networking.aws_route_table.route_table_private",
            "module.public_subnet2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0337cbb9b6cdefb7b",
            "id": "r-rtb-08bb1d931325b08511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08bb1d931325b0851",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_internet_gateway.internet_gateway",
            "module.networking.aws_route_table.route_table_public"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:route-table/rtb-098562554eee3ebbd",
            "id": "rtb-098562554eee3ebbd",
            "owner_id": "071872765473",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:route-table/rtb-08bb1d931325b0851",
            "id": "rtb-08bb1d931325b0851",
            "owner_id": "071872765473",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ec9f73786a07cc2",
            "route_table_id": "rtb-098562554eee3ebbd",
            "subnet_id": "subnet-0f881b491798d5d59"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_route_table.route_table_private",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba524777d1e7ec5e",
            "route_table_id": "rtb-098562554eee3ebbd",
            "subnet_id": "subnet-05266d9126f708a3e"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_route_table.route_table_private",
            "module.private_subnet1.aws_subnet.subnet",
            "module.private_subnet2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1d8b3b0a289c70c",
            "route_table_id": "rtb-08bb1d931325b0851",
            "subnet_id": "subnet-07a431727baaf8896"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_route_table.route_table_public",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet"
          ]
        },
        {
          "index_key": "b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5b491513611ee65",
            "route_table_id": "rtb-08bb1d931325b0851",
            "subnet_id": "subnet-07a4aea8c42d834f2"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc",
            "module.networking.aws_route_table.route_table_public",
            "module.public_subnet1.aws_subnet.subnet",
            "module.public_subnet2.aws_subnet.subnet"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:subnet/subnet-0f881b491798d5d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f881b491798d5d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071872765473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet1"
            },
            "tags_all": {
              "Name": "private_subnet1"
            },
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:subnet/subnet-05266d9126f708a3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05266d9126f708a3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071872765473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private_subnet2"
            },
            "tags_all": {
              "Name": "private_subnet2"
            },
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet1",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:subnet/subnet-07a431727baaf8896",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a431727baaf8896",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071872765473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet1"
            },
            "tags_all": {
              "Name": "public_subnet1"
            },
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet2",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:subnet/subnet-07a4aea8c42d834f2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a4aea8c42d834f2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071872765473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet2"
            },
            "tags_all": {
              "Name": "public_subnet2"
            },
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_gr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:071872765473:security-group/sg-0d95e18b832f044eb",
            "description": "security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d95e18b832f044eb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "security_group",
            "name_prefix": "",
            "owner_id": "071872765473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security_group"
            },
            "tags_all": {
              "Name": "security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0909efef33fd2e93b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.main_vpc.aws_vpc.vpc"
          ]
        }
      ]
    }
  ]
}